Sat Nov 17 21:56:02 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/SmoothNodes3D.java: Quality is
	checked now, so there is no more need to constrain nodes.

Fri Nov 16 12:24:10 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/SmoothNodes3D.java: Loop on vertices
	and not triangles.  A vertex is moved only if mesh quality is
	improved.
	* src/org/jcae/mesh/amibe/ds/Mesh.java: New ensureCapacity() method
	to resize collections of nodes and triangles.  This method is used
	when reading meshes from files.

Thu Nov 15 15:13:00 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Vertex.java: New isManifold() method.
	* src/org/jcae/mesh/amibe/util/QSortedTree.java: Generified.

Thu Nov 15 12:58:24 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Vertex.java (discreteProject): Remove
	previous workaround and instead detect degenerated cases.

Thu Nov 15 01:45:26 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Vertex.java (discreteProject): Current
	projection does not work if a vertex has four coplanar incident
	triangles.  We now detect coplanar triangles and keep vertex
	unmodified.

Wed Nov 14 11:27:10 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/MeshExporter.java: Copy Amibe2VTK class
	into MeshExporter.
	* src/org/jcae/mesh/amibe/validation/QualityFloat.java: Compute
	min and max values in finish().  New getValueByPercent(),
	getMeanValue() and getStandardDeviation() methods.

Tue Nov 13 13:42:27 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos2d/Insertion.java: Edge checks have
	been optimized yesterday, but insertion of triangle centroids can
	also be optimized to check only triangles which have been modified
	during previous iteration.  This improves performance for very
	large patches.